Created new endpoint to allow for event requests
